# bible_app

./: Dockerfile  License  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
bible/: asgi.py  settings.py  urls.py  wsgi.py
