[tool.poetry]
name = "bible-app"
version = "0.1.0"
description = "Bible Project"
authors = ["Pedro Arthur <pedroarthurzpyz@outlook.com>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
django = "^5.1.1"
taskipy = "^1.13.0"
djangorestframework = "^3.15.2"
psutil = "5.9.7" 
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 79
extend-exclude = ['migrations'] 

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
format = 'ruff check .. --fix && ruff format'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'